--- a/PlatziWebsite/Views/Home/Index.cshtml
+++ b/PlatziWebsite/Views/Home/Index.cshtml
@@ -5,5 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">CAROLINA</h1>
     <p>Hola soy Carolina</p>
-    <p>Bienvenido a mi sitio</p>
+    <p>Bienvenido a mi sitio CAROL</p>
 </div>
