--- a/PlatziWebsite/Views/Home/Privacy.cshtml
+++ b/PlatziWebsite/Views/Home/Privacy.cshtml
@@ -3,4 +3,21 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+I think the only card she has is the Lorem card. Lorem Ipsum is unattractive, both inside and out. I fully understand why it’s former users left it for something else. They made a good decision.
+</p>
+<p>
+   An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud. 
+</p>
+<p>
+An 'extremely credible source' has called my office and told me that Lorem Ipsum's birth certificate is a fraud. I think the only difference between me and the other placeholder text is that I’m more honest and my words are more beautiful. Does everybody know that pig named Lorem Ipsum? She's a disgusting pig, right? Lorem Ipsum is FAKE TEXT! When other websites give you text, they’re not sending the best. They’re not sending you, they’re sending words that have lots of problems and they’re bringing those problems with us. They’re bringing mistakes. They’re bringing misspellings. They’re typists… And some, I assume, are good words. An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud.
+</p>
+<p>
+    I write the best placeholder text, and I'm the biggest developer on the web by far... While that's mock-ups and this is politics, are they really so different? An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud. That other text? Sadly, it’s no longer a 10. I'm speaking with myself, number one, because I have a very good brain and I've said a lot of things.
+</p>
+<p>
+I write the best placeholder text, and I'm the biggest developer on the web by far... While that's mock-ups and this is politics, are they really so different? An ‘extremely credible source’ has called my office and told me that Barack Obama’s placeholder text is a fraud. That other text? Sadly, it’s no longer a 10. I'm speaking with myself, number one, because I have a very good brain and I've said a lot of things.
+</p>
+<p>
+    You have so many different things placeholder text has to be able to do, and I don't believe Lorem Ipsum has the stamina.
+</p>
