--- a/PlatziWebsite/wwwroot/css/site.css
+++ b/PlatziWebsite/wwwroot/css/site.css
@@ -1,71 +1,41 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿body{
+  font-family: Arial;
+  margin: 0;
+  padding: 0;
+}
 
-a.navbar-brand {
-  white-space: normal;
+#cabecera{
+  border: 1px solid #06101C;
+  color: white;
+  background: #06101C;
+}
+#cabecera #logo{
+  vertical-align: middle;
+}
+
+#cabecera .text-logo{
+  color: white;
+  font-size: 1.5rem;
+  margin: 0 30px;
+}
+#cuerpo{
+  margin: 10px;
+  padding: 15px;
+  font-size: 1.2rem;
+}
+
+#cuerpo img{
+
+}
+
+#gatoHome{
+  margin-right: 10px;
+}
+
+footer{
+  background: #308196;
   text-align: center;
-  word-break: break-all;
+  padding: 10px 0;
+  color: #beebf3;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
-}
